--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -63,9 +63,6 @@
     "corruptedFile": "Beschädigte Datei",
     "create": "Schreiben",
     "debugMenuDescription": "Entwickler-Tools zum Umschalten experimenteller Funktionen",
-    "deleteOnboardingMindsMessage": "Sie haben Ihre erste Notiz erstellt! Möchten Sie die Tutorial-Notizen löschen?",
-    "deleteOnboardingMindsTitle": "Tutorial-Notizen löschen?",
-    "deleteTutorial": "Löschen",
     "digest": "Zusammenfassung",
     "enterPassword": "Passwort eingeben",
     "error": "Fehler",
@@ -83,7 +80,6 @@
     "insightsDescription": "Statistiken aller Ihrer Einträge",
     "insufficientStorage": "Unzureichender Speicherplatz",
     "invalidFormat": "Ungültiges Format",
-    "keepTutorial": "Behalten",
     "lastTwoWeeks": "Letzte 2 Wochen",
     "minds": "Notizen",
     "mindsExported": "Notizen exportiert",
@@ -101,7 +97,7 @@
     "onboardingMind3": "Im Tab 'Kalender' werden alle Notizen nach Tagen, Wochen und Monaten angezeigt",
     "onboardingMind4": "Der Tab 'Analytik' zeigt eine kurze Statistik Ihrer Einträge",
     "onboardingMind5": "Alle Notizen werden nur auf Ihrem Telefon gespeichert",
-    "onboardingMind5Comment1": "Verwenden Sie beim Wechsel des Telefons die Import/Export-Funktion",
+    "onboardingMind6": "Um eine neue Notiz zu erstellen, tippen Sie auf 'Schreiben'",
     "password": "Passwort",
     "passwordsDoNotMatch": "Passwörter stimmen nicht überein",
     "pleaseAuthenticateToShowContent": "Bitte authentifizieren Sie sich, um den Inhalt Ihrer Notiz anzuzeigen",
