--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -63,9 +63,6 @@
     "corruptedFile": "破損したファイル",
     "create": "書く",
     "debugMenuDescription": "実験的な機能を切り替えるための開発者ツール",
-    "deleteOnboardingMindsMessage": "最初のメモを作成しました！チュートリアルノートを削除しますか？",
-    "deleteOnboardingMindsTitle": "チュートリアルノートを削除しますか？",
-    "deleteTutorial": "削除",
     "digest": "ダイジェスト",
     "enterPassword": "パスワードを入力",
     "error": "エラー",
@@ -83,7 +80,6 @@
     "insightsDescription": "すべてのエントリーの統計",
     "insufficientStorage": "ストレージ容量が不足しています",
     "invalidFormat": "無効な形式",
-    "keepTutorial": "保持",
     "lastTwoWeeks": "過去2週間",
     "minds": "メモ",
     "mindsExported": "メモをエクスポートしました",
@@ -101,7 +97,7 @@
     "onboardingMind3": "「カレンダー」タブでは、すべてのメモが日、週、月ごとに表示されます",
     "onboardingMind4": "「分析」タブでは、エントリーの簡単な統計が表示されます",
     "onboardingMind5": "すべてのメモはあなたのスマートフォンにのみ保存されます",
-    "onboardingMind5Comment1": "スマートフォンを変更する際は、インポート/エクスポート機能を使用してください",
+    "onboardingMind6": "新しいメモを作成するには、'書く'をタップしてください",
     "password": "パスワード",
     "passwordsDoNotMatch": "パスワードが一致しません",
     "pleaseAuthenticateToShowContent": "メモの内容を表示するには認証してください",
