--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -394,9 +394,5 @@
     "onboardingMind3": "'Күнтізбе' қойындысында барлық жазбалар күндер, апталар және айлар бойынша көрсетіледі",
     "onboardingMind4": "'Аналитика' қойындысы жазбаларыңыздың қысқаша статистикасын көрсетеді",
     "onboardingMind5": "Барлық жазбалар тек телефоныңызда сақталады",
-    "onboardingMind5Comment1": "Телефонды ауыстырғанда Импорт/Экспорт функциясын пайдаланыңыз",
-    "deleteOnboardingMindsTitle": "Оқыту жазбаларын жою керек пе?",
-    "deleteOnboardingMindsMessage": "Сіз алғашқы жазбаңызды жасадыңыз! Оқыту жазбаларын жойғыңыз келе ме?",
-    "keepTutorial": "Сақтау",
-    "deleteTutorial": "Жою"
+    "onboardingMind6": "Жаңа жазба жасау үшін 'Жазу' түймесін басыңыз"
 }
