--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -63,9 +63,6 @@
     "corruptedFile": "Поврежденный файл",
     "create": "Написать",
     "debugMenuDescription": "Инструменты разработчика для переключения экспериментальных функций",
-    "deleteOnboardingMindsMessage": "Вы создали свою первую заметку! Хотите удалить заметки из обучения?",
-    "deleteOnboardingMindsTitle": "Удалить заметки обучения?",
-    "deleteTutorial": "Удалить",
     "digest": "Сводка",
     "enterPassword": "Введите пароль",
     "error": "Ошибка",
@@ -83,7 +80,6 @@
     "insightsDescription": "Статистика всех ваших записей",
     "insufficientStorage": "Недостаточно памяти",
     "invalidFormat": "Неверный формат",
-    "keepTutorial": "Оставить",
     "lastTwoWeeks": "Последние 2 недели",
     "minds": "Заметки",
     "mindsExported": "Заметки экспортированы",
@@ -101,7 +97,7 @@
     "onboardingMind3": "На вкладке 'Календарь' все заметки отображаются по дням, неделям и месяцам",
     "onboardingMind4": "Вкладка 'Аналитика' показывает краткую статистику ваших записей",
     "onboardingMind5": "Все заметки хранятся только на вашем телефоне",
-    "onboardingMind5Comment1": "При смене телефона используйте функцию Импорт/Экспорт",
+    "onboardingMind6": "Чтобы создать новую заметку, нажмите 'Написать'",
     "password": "Пароль",
     "passwordsDoNotMatch": "Пароли не совпадают",
     "pleaseAuthenticateToShowContent": "Пожалуйста, пройдите аутентификацию для отображения содержимого вашей заметки",
