--- a/lib/l10n/app_sr.arb
+++ b/lib/l10n/app_sr.arb
@@ -63,9 +63,6 @@
     "corruptedFile": "Оштећени фајл",
     "create": "Напиши",
     "debugMenuDescription": "Алати за програмере за укључивање експерименталних функција",
-    "deleteOnboardingMindsMessage": "Направио си своју прву белешку! Да ли желиш да обришеш белешке из туторијала?",
-    "deleteOnboardingMindsTitle": "Обрисати белешке из туторијала?",
-    "deleteTutorial": "Обриши",
     "digest": "Сажетак",
     "enterPassword": "Унеси лозинку",
     "error": "Грешка",
@@ -83,7 +80,6 @@
     "insightsDescription": "Статистика свих твојих уноса",
     "insufficientStorage": "Недовољно простора за складиштење",
     "invalidFormat": "Неважећи формат",
-    "keepTutorial": "Задржи",
     "lastTwoWeeks": "Последње 2 недеље",
     "minds": "Белешке",
     "mindsExported": "Белешке извезене",
@@ -101,7 +97,7 @@
     "onboardingMind3": "У картици 'Календар' све белешке су приказане по данима, недељама и месецима",
     "onboardingMind4": "Картица 'Аналитика' приказује кратку статистику твојих уноса",
     "onboardingMind5": "Све белешке су сачуване само на твојом телефону",
-    "onboardingMind5Comment1": "При промени телефона, користи функцију Увоз/Извоз",
+    "onboardingMind6": "Да креирате нову белешку, додирните 'Пиши'",
     "password": "Лозинка",
     "passwordsDoNotMatch": "Лозинке се не подударају",
     "pleaseAuthenticateToShowContent": "Молим те аутентификуј се да би приказао садржај твоје белешке",
