--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -63,9 +63,6 @@
     "corruptedFile": "文件已损坏",
     "create": "写",
     "debugMenuDescription": "用于切换实验性功能的开发者工具",
-    "deleteOnboardingMindsMessage": "您已创建了第一条笔记！要删除教程笔记吗？",
-    "deleteOnboardingMindsTitle": "删除教程笔记？",
-    "deleteTutorial": "删除",
     "digest": "摘要",
     "enterPassword": "输入密码",
     "error": "错误",
@@ -83,7 +80,6 @@
     "insightsDescription": "所有条目的统计信息",
     "insufficientStorage": "存储空间不足",
     "invalidFormat": "格式无效",
-    "keepTutorial": "保留",
     "lastTwoWeeks": "最近2周",
     "minds": "笔记",
     "mindsExported": "笔记已导出",
@@ -101,7 +97,7 @@
     "onboardingMind3": "在'日历'标签页中，所有笔记按天、周和月显示",
     "onboardingMind4": "'分析'标签页显示您条目的简要统计信息",
     "onboardingMind5": "所有笔记仅存储在您的手机上",
-    "onboardingMind5Comment1": "更换手机时，请使用导入/导出功能",
+    "onboardingMind6": "要创建新笔记，请点击'写入'",
     "password": "密码",
     "passwordsDoNotMatch": "密码不匹配",
     "pleaseAuthenticateToShowContent": "请进行身份验证以显示您的笔记内容",
