--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -520,24 +520,8 @@
     "@onboardingMind5": {
         "description": "Privacy explanation"
     },
-    "onboardingMind5Comment1": "When changing phones, use the Import/Export feature",
-    "@onboardingMind5Comment1": {
-        "description": "Data portability explanation"
-    },
-    "deleteOnboardingMindsTitle": "Delete tutorial notes?",
-    "@deleteOnboardingMindsTitle": {
-        "description": "Alert dialog title for deleting onboarding minds"
-    },
-    "deleteOnboardingMindsMessage": "You've created your first mind! Would you like to delete the tutorial notes?",
-    "@deleteOnboardingMindsMessage": {
-        "description": "Alert dialog message for deleting onboarding minds"
-    },
-    "keepTutorial": "Keep",
-    "@keepTutorial": {
-        "description": "Button to keep onboarding minds"
-    },
-    "deleteTutorial": "Delete",
-    "@deleteTutorial": {
-        "description": "Button to delete onboarding minds"
+    "onboardingMind6": "To create new note tap 'Write'",
+    "@onboardingMind6": {
+        "description": "Instruction to create new note"
     }
 }
