--- a/lib/l10n/app_ky.arb
+++ b/lib/l10n/app_ky.arb
@@ -394,9 +394,5 @@
     "onboardingMind3": "'Жылнаама' өтмөгүндө бардык жазуулар күндөр, жумалар жана айлар боюнча көрсөтүлөт",
     "onboardingMind4": "'Аналитика' өтмөгү жазууларыңыздын кыскача статистикасын көрсөтөт",
     "onboardingMind5": "Бардык жазуулар телефонуңузда гана сакталат",
-    "onboardingMind5Comment1": "Телефонду алмаштырганда Импорт/Экспорт функциясын колдонуңуз",
-    "deleteOnboardingMindsTitle": "Окутуу жазууларын өчүрүү керекпи?",
-    "deleteOnboardingMindsMessage": "Сиз биринчи жазууңузду жараттыңыз! Окутуу жазууларын өчүргүңүз келеби?",
-    "keepTutorial": "Калтыруу",
-    "deleteTutorial": "Өчүрүү"
+    "onboardingMind6": "Жаңы жазуу жасоо үчүн 'Жазуу' баскычын басыңыз"
 }
